[tool.poetry]
name = "telegram_bot"
version = "0.1.0"
description = ""
authors = ["Sérgio Rafael Siqueira <osergiosiqueira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
gspread = "^5.12.4"
pydantic = "^2.5.3"
pandas = "^2.1.4"
pytelegrambotapi = "^4.14.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"

[tool.black]
line-length = 80
skip-string-normalization = 1
exclude = '''
/(
    \.git
  | node_modules
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
